--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   isar_flutter_libs: ^3.1.0+1
   mocktail: ^1.0.2
   path_provider: ^2.1.1
+  rxdart: ^0.27.7
 
 dev_dependencies:
   flutter_test:
