--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
   mocktail: ^1.0.2
   path_provider: ^2.1.1
   rxdart: ^0.27.7
+  flutter_riverpod: ^2.4.9
+  riverpod_annotation: ^2.3.3
+  hooks_riverpod: ^2.4.9
 
 dev_dependencies:
   flutter_test:
@@ -28,6 +31,8 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner: ^2.4.7
   isar_generator: ^3.1.0+1
+  riverpod_generator: ^2.3.3
+  riverpod_lint: ^2.0.4
 
 flutter:
   uses-material-design: true
