--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter_riverpod: ^2.4.9
   riverpod_annotation: ^2.3.3
   hooks_riverpod: ^2.4.9
+  # TODO these might be dev dep actually
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
