--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   # TODO these might be dev dep actually
   path: ^1.8.3
   mocktail_image_network: ^1.0.0
+  dio: ^5.4.0
 
 dev_dependencies:
   flutter_test:
