--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   path: ^1.8.3
   mocktail_image_network: ^1.0.0
   dio: ^5.4.0
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
