--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   equatable: ^2.0.5
   intl: ^0.18.1
   google_sign_in: ^6.2.1
+  cookie_jar: ^4.0.8
+  dio_cookie_manager: ^3.1.1
 
 dev_dependencies:
   flutter_test:
