--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   google_sign_in: ^6.2.1
   cookie_jar: ^4.0.8
   dio_cookie_manager: ^3.1.1
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_test:
