--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
   mocktail: ^1.0.2
-  path_provider: ^2.1.1
+  path_provider: ^2.1.3
   rxdart: ^0.27.7
   flutter_riverpod: ^2.4.9
   riverpod_annotation: ^2.3.3
@@ -34,15 +34,18 @@ dependencies:
   cookie_jar: ^4.0.8
   dio_cookie_manager: ^3.1.1
   collection: ^1.18.0
+  drift: ^2.15.0
+  sqlite3_flutter_libs: ^0.5.22
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
-  build_runner: ^2.4.7
+  build_runner: ^2.4.9
   isar_generator: ^3.1.0+1
   riverpod_generator: ^2.3.3
   riverpod_lint: ^2.0.4
+  drift_dev: ^2.15.0
 
 flutter:
   uses-material-design: true
