pass env vars wrapper to interceptor

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,6 +15,7 @@
       ]
     },
     {
+      // TODO this could be fone via flavors too
       "name": "five_on_4_mobile-local-api",
       "request": "launch",
       "type": "dart",
